5-22-2020 In-memory data persistence

--- a/Web.GraphQL/Web.GraphQL.csproj
+++ b/Web.GraphQL/Web.GraphQL.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="GraphQL" Version="3.0.0-preview-1650" />
     <PackageReference Include="GraphQL.NewtonsoftJson" Version="3.0.0-preview-1650" />
     <PackageReference Include="GraphQL.SystemTextJson" Version="3.0.0-preview-1650" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
