--- a/Hello.GraphQL/Hello.GraphQL.csproj
+++ b/Hello.GraphQL/Hello.GraphQL.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="3.0.0-preview-1644" />
-    <PackageReference Include="GraphQL.NewtonsoftJson" Version="3.0.0-preview-1644" />
+    <PackageReference Include="GraphQL" Version="4.2.0" />
+    <PackageReference Include="GraphQL.NewtonsoftJson" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
