--- a/Web.GraphQL/package.json
+++ b/Web.GraphQL/package.json
@@ -1,25 +1,25 @@
 {
   "dependencies": {
-    "graphiql": "^1.0.0-alpha.8",
-    "graphql": "^15.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "graphiql": "^1.4.0",
+    "graphql": "^15.5.0",
+    "isomorphic-fetch": "^3.0.0",
+    "react": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.1",
-    "html-webpack-plugin": "^4.2.0",
-    "react-dom": "^16.12.0",
-    "style-loader": "^1.1.3",
-    "webpack": "4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "react-dom": "^17.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "yarn-upgrade-all": "^0.5.4"
   }
 }
