--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,1 @@
-*.cs linguist-detectable=true  
-*.java linguist-detectable=false  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false 
-*.asm linguist-detectable=false 
+GraphQLCoreFromScratch/wwwroot/* linguist-vendored
